Rename drawio-export job to keymap-drawer-export in workflow configuration

--- a/.github/workflows/keymap-drawer-export.yml
+++ b/.github/workflows/keymap-drawer-export.yml
@@ -3,7 +3,7 @@ name: Generate keymap SVG
 on: push
 
 jobs:
-  drawio-export:
+  keymap-drawer-export:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
