Comment out Swedish keycode mappings in keymap_drawer.config.yaml

--- a/keymap_drawer.config.yaml
+++ b/keymap_drawer.config.yaml
@@ -1,6 +1,6 @@
 parse_config:
   zmk_remove_keycode_prefix: ["SE_"]
-  zmk_keycode_map:
-    AE: "Å"
-    AA: "Ä"
-    OO: "Ö"
+  # zmk_keycode_map:
+  #   AE: "Å"
+  #   AA: "Ä"
+  #   OO: "Ö"
